--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "pca-plot": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "volcano-plot": "^1.0.6"
+    "rna-seq-plots": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
